--- a/src/components/ChartArea/styles.css
+++ b/src/components/ChartArea/styles.css
@@ -2,5 +2,6 @@
     display: flex;
     flex: 1;
     justify-content: center;
-    align-self: center;
+    align-self: flex-start;
+    flex-flow: column;
 }
